--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +13,33 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
+    
+    <div class="container">
+
+        <main class="card">
+
+            <form action="">
+                <h1 class="title">Cálculo de IMC</h1>
+                <div class="input-wrapper">
+                    <label for="weight">Peso (kg)</label>
+                    <input id="weight" type="text" placeholder="60">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="height">Altura (cm)</label>
+                    <input id="height" type="text" placeholder="175">
+                </div>
+
+                <button type="submit">Calcular IMC <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.1685 7.65718C2.83445 7.65718 2.56364 7.92799 2.56364 8.26204C2.56363 8.5961 2.83444 8.8669 3.16849 8.86691L3.1685 7.65718ZM14.3589 8.26213L14.7866 8.68983C15.0228 8.45361 15.0228 8.07064 14.7866 7.83442L14.3589 8.26213ZM10.0726 3.12038C9.83637 2.88417 9.45339 2.88417 9.21718 3.12038C8.98097 3.35659 8.98097 3.73957 9.21718 3.97578L10.0726 3.12038ZM9.21718 12.5485C8.98097 12.7847 8.98097 13.1677 9.21718 13.4039C9.45339 13.6401 9.83637 13.6401 10.0726 13.4039L9.21718 12.5485ZM3.16849 8.86691L14.3589 8.86699L14.3589 7.65726L3.1685 7.65718L3.16849 8.86691ZM9.21718 3.97578L13.9312 8.68983L14.7866 7.83442L10.0726 3.12038L9.21718 3.97578ZM13.9312 7.83442L9.21718 12.5485L10.0726 13.4039L14.7866 8.68983L13.9312 7.83442Z" fill="white"/>
+                    </svg>
+                    </button>
+
+            </form>
+
+        </main>
+
+    </div>
     
 
 </body>
