--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         </main>
 
     </div>
+
+    <div class="modal-wrapper">
+        <div class="modal card">
+            <h2 class="title"> Seu IMC é de 28</h2>
+        </div>
+    </div>
     
 
 </body>
