--- a/index.html
+++ b/index.html
@@ -24,32 +24,34 @@
         Digite somente números
     </div>
 
-    <div class="container">
-        <main class="card">
-            <form>
-                <h1 class="title">Cálculo de IMC</h1>
-                <div class="input-wrapper">
-                    <label for="weight">Peso (kg)</label>
-                    <input 
-                        id="weight" 
-                        type="text"
-                        placeholder="60" />
-                </div>
+    <div class="caixaResponsiva">
+        <div class="container">
+            <main class="card">
+                <form>
+                    <h1 class="title">Cálculo de IMC</h1>
+                    <div class="input-wrapper">
+                        <label for="weight">Peso (kg)</label>
+                        <input 
+                            id="weight" 
+                            type="text"
+                            placeholder="60" />
+                    </div>
 
-                <div class="input-wrapper">
-                    <label for="height">Altura (cm)</label>
-                    <input 
-                        id="height" 
-                        type="text"
-                        placeholder="165" />
-                </div>
+                    <div class="input-wrapper">
+                        <label for="height">Altura (cm)</label>
+                        <input 
+                            id="height" 
+                            type="text"
+                            placeholder="165" />
+                    </div>
 
-                <button type="submit">
-                    Calcular IMC
-                    <img src="./assets/arrow.svg" alt="Seta apontando para direita"> 
-                </button>
-            </form>
-        </main>
+                    <button type="submit">
+                        Calcular IMC
+                        <img src="./assets/arrow.svg" alt="Seta apontando para direita"> 
+                    </button>
+                </form>
+            </main>
+        </div>
     </div>
 
     <div class="modal-wrapper">
